--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "ts-node": "10.7.0",
       "@types/node": "^16.11.10",
+      "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.17",
-      "reflect-metadata": "^0.1.13",
-      "mysql": "^2.14.1",
       "ccxt": "^3.1.60",
       "dotenv": "^16.3.1",
-      "technicalindicators": "^3.1.0"
+      "mysql": "^2.14.1",
+      "reflect-metadata": "^0.1.13",
+      "technicalindicators": "^3.1.0",
+      "typeorm": "0.3.17"
    },
    "scripts": {
       "start": "export NODE_ENV=development && ts-node src/index.ts",
