--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
          "es5",
          "es6"
       ],
+      "resolveJsonModule": true,
+      "esModuleInterop": true,
       "target": "es2017",
       "module": "commonjs",
       "moduleResolution": "node",
