--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "bollinger-bands": "^3.0.2",
       "ccxt": "^3.1.60",
       "dotenv": "^16.3.1",
+      "indicatorts": "^1.0.14",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.13",
       "technicalindicators": "^3.1.0",
