--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "Trading-Bot-New",
+   "name": "Trading-Bot",
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
@@ -9,7 +9,7 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "ccxt": "^3.1.60",
+      "ccxt": "^4.0.68",
       "dotenv": "^16.3.1",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.13",
