--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "@types/nodemailer": "^6.4.9",
       "ccxt": "^4.0.68",
       "dotenv": "^16.3.1",
       "mysql": "^2.14.1",
+      "nodemailer": "^6.9.4",
       "reflect-metadata": "^0.1.13",
       "technicalindicators": "^3.1.0",
       "typeorm": "0.3.17"
