--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "@ixjb94/indicators": "^1.1.22",
       "@types/nodemailer": "^6.4.9",
       "ccxt": "^4.0.68",
       "dotenv": "^16.3.1",
