--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "mysql": "^2.14.1",
       "nodemailer": "^6.9.4",
       "reflect-metadata": "^0.1.13",
+      "simple-statistics": "^7.8.3",
       "technicalindicators": "^3.1.0",
       "typeorm": "0.3.17"
    },
